RESOLVED FIXED267932
MediaStreamTrackProcessor should not be destroyed if its ReadableStream source is live
https://bugs.webkit.org/show_bug.cgi?id=267932
Summary MediaStreamTrackProcessor should not be destroyed if its ReadableStream sourc...
youenn fablet
Reported 2024-01-23 09:15:12 PST
MediaStreamTrackProcessor should not be destroyed if its ReadableStream source is live
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-23 13:09:44 PST
youenn fablet
Comment 2 2024-01-23 13:14:14 PST
EWS
Comment 3 2024-01-24 02:48:04 PST
Committed 273400@main (1dd42ba248d5): <https://commits.webkit.org/273400@main> Reviewed commits have been landed. Closing PR #23119 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.