MediaStreamTrackProcessor should not be destroyed if its ReadableStream source is live https://bugs.webkit.org/show_bug.cgi?id=267932 rdar://121465569

Reviewed by Eric Carlson.

We want to keep MediaStreamTrackProcessor alive if its ReadableStream source is alive, so that we can pipe the received video frames to the source.
To do this, MediaStreamTrackProcessor::Source is no longer RefCounted but will use its MediaStreamTrackProcessor ref count.

We make ReadableStreamSource no longer refcounted so that MediaStreamTrackProcessor::Source can do its own ref/deref.
We introduce RefCountedReadableStreamSource for other existing ReadableStream sources.

* Source/WebCore/Modules/fetch/FetchBodySource.h:
* Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:
(WebCore::MediaStreamTrackProcessor::readable):
* Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.h:
* Source/WebCore/Modules/streams/ReadableStreamSource.h:
* Source/WebCore/Modules/webtransport/DatagramSource.h:
* Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamSource.h:
* Source/WebCore/Modules/webtransport/WebTransportReceiveStreamSource.h:
* Source/WebCore/fileapi/Blob.cpp:
(WebCore::Blob::stream):
* Source/WebKit/WebProcess/Network/WebTransportReceiveStreamSource.h:

Canonical link: https://commits.webkit.org/273400@main